force-app/main/default/objects/Share__c/Share__c.object-meta.xml
<CustomObject>
    <description>Shares between user master</description>
    <label>Share</label>
    <nameField>
        <label>Shares Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>