force-app/main/default/objects/Share__c/fields/Average_Individual_Share__c.field-meta.xml
<CustomField>
    <fullName>Average_Individual_Share__c</fullName>
    <formula>Monthly_Expence__c / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average/Individual Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>