force-app/main/default/objects/Share__c/fields/Monthly_Expence__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expence__c</fullName>
    <label>Monthly Expence</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>