force-app/main/default/objects/Share__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <label>Total Expense</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>