force-app/main/default/objects/Share__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Expense__c</columns>
    <columns>Monthly_Expence__c</columns>
    <columns>Average_Individual_Share__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>